# simple-bank

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/adapters/core/: __init__.py
backend/backend/: settings.py
backend/libs/log/: __init__.py
backend/libs/rabbit/: __init__.py
backend/libs/redis/: __init__.py
backend/srvs/core/: settings.py  urls.py
backend/srvs/core/account/: apps.py  exceptions.py  models.py  serializers.py  settings.py  views.py
backend/srvs/core/account/migrations/: 0001_initial.py  0002_account.py  0003_transaction.py  0004_transaction_status_transaction_type_and_more.py  0004_transaction_type_alter_transaction_destination_and_more.py
backend/srvs/core/auth/: apps.py  serializers.py  urls.py  views.py
backend/srvs/gateway/: __main__.py  settings.py
backend/srvs/gateway/api/: endpoints.py  errors.py  models.py  routes.py
backend/srvs/increase_requestor/: __main__.py
backend/srvs/increase_requetor/: __main__.py  settings.py
backend/srvs/transfer_large_requestor/: __main__.py  settings.py
backend/srvs/transfer_small_requestor/: __main__.py  settings.py
