[tool.poetry]
name = "simple-bank"
version = "0.1.0"
description = ""
authors = ["Reza Mohammadi <rmm.dev.backend@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
environs = "^11.0.0"
starlette = "^0.37.2"
pydantic = "^2.6.3"
uvicorn = "^0.27.1"
pika = "^1.3.2"
redis = "^5.0.2"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
